examples/invalid/redeclarations/redeclarationParam.vbr
track f (a: quarter, b: quarter, c: quarter, a: whole, z: whole) {

}
moderato() {
    
}